# uefi-bootloader-rust

./: Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
src/: main.rs  relocation.rs  uefi.rs
